--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev host": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "firebase": "^10.9.0",
     "roboto-fontface": "*",
     "vue": "^3.3.0",
+    "vuefire": "^3.1.23",
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
